# shopee-telegram-bot

./: .gitignore  .pre-commit-config.yaml  env.credentials  pyproject.toml  requirements.txt
src/: main.py  setup.py
src/common/: exceptions.py
src/services/: etl_service.py  pix_service.py  telegram_service.py
src/style/: df_style.css
