[tool.stela]
use_environment_layers = true
environment_variable_name = "ENV"
default_environment = "local"
show_logs = false

[environment]
project.name = "wolfgear-bot"
project.secret_key = "foo"
project.admins = ["marcodkts"]
project.debug = false
project.log_level = "INFO"
project.default_language = "pt"
telegram.url = "https://api.telegram.org/bot"

[environment.local]
project.log_level = "DEBUG"
project.testing = true

[tool.poetry]
name = "wolfgear-bot"
version = "0.1.0"
description = ""
authors = ["Marco Aurélio <marcodkts@wolfgear.tech>"]
readme = "README.md"
packages = [{include = "wolfgear-bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
weasyprint = "^58.1"
loguru = "^0.7.0"
pytelegrambotapi = "^4.11.0"
googletrans = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
black = "^23.3.0"
isort = "^5.12.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | \.aws-sam
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | node_modules
    | dependencies
  )/
)
'''
include = '\.pyi?$'
line-length = 120
target-version = ['py38']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
profile = "black"
use_parentheses = true
